--- a/batch-example/batch-example-infra/docker-compose.yml
+++ b/batch-example/batch-example-infra/docker-compose.yml
@@ -11,3 +11,23 @@ services:
       POSTGRES_PASSWORD: qwer1234
     ports:
       - "5432:5432"
+
+  prometheus:
+    image: prom/prometheus:v2.7.2
+    restart: always
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - '9090:9090'
+
+  pushgateway:
+    image: prom/pushgateway:v0.6.0
+    restart: always
+    ports:
+      - '9091:9091'
+
+  grafana:
+    image: grafana/grafana:6.0.2
+    restart: always
+    ports:
+      - '3000:3000'
