--- a/batch-example/src/main/resources/application.yml
+++ b/batch-example/src/main/resources/application.yml
@@ -12,8 +12,15 @@ spring:
       enabled: true
     jdbc:
       initialize-schema: always
+
 logging:
   level:
     root: INFO
-    org.springfreamework.jdbc.core.JdbcTemplate: DEBUG
-    org.springfreamework.jdbc.core.StatementCreatorUtils: DEBUG
+#    org.springframework.jdbc.core.JdbcTemplate: DEBUG
+#    org.springframework.jdbc.core.StatementCreatorUtils: TRACE
+
+prometheus:
+  job:
+    name: spring-batch
+  pushgateway:
+    url: localhost:9091
